  multiple super blocks.
- The `--lin-stage1` option can now be used without compilation using the
  `-DEXTRA=ON` cmake option.
- Added the option to specify the `_lin` suffix for sensitivity keywords for the
  `--iterate` option to activate linear-time feature.
- Added the option `--linsearch` to activate linear-time feature for the search
  workflows.

[2.1.1]
- Fixed compilation errors on non-x86 systems and for the clang compiler.
- Fixed an error message when running the `recluster` workflow.
- Fixed a bug that could cause an `invalid varint encoding` error when using the
  DAA format.
- Fixed a bug that could cause corrupted DAA output.
- Fixed a bug that caused an error in the `view` workflow.
- Adjusted the hit culling heuristic of the frameshift alignment mode to be less
  aggressive.

[2.1.0]
- Added the `cluster` workflow to cluster protein sequences.
- Added the `realign` workflow to generate clustering output.
- Added the `recluster` workflow to correct errors in clusterings.
- Added the `reassign` workflow to reassign cluster members to their closest centroid.
- Added the option `-M/--memory-limit` to set a memory limit for clustering workflows.
- Added the `approx-id` option to filter alignments by approximate sequence identity
  and to set an approximate sequence identity threshold for clustering.
- Added the `--member-cover` option to set the coverage threshold of the cluster
  member sequence.
- Added the `cluster-steps` option to set steps for cascaded clustering.
- Added the `clusters` option to specify clustering input file.
- The `blastx` mode will now mask any open reading frame below the minimum required
  length as specified by `--min-orf`.
- The `blastx` mode will only count unmasked letters towards the block size.
- Fixed a bug that caused an error when using the global ranking mode.
- Added the fast mode as the first round in iterative searches.
- Fixed a bug that caused the program not to function on systems without support